--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
+    "react-native-snap-carousel-tabs": "^3.7.7",
     "react-native-vector-icons": "^7.0.0",
     "typescript": "^3.8.3"
   },
